--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <table class="application-descriptions">
           <tr>
             <td class="descriptions-item-value">146
-              <span class="descriptions-item-percent">%</td>
+              <span class="descriptions-item-percent">%</span></td>
             <td class="descriptions-item-value">100
               <span class="descriptions-item-percent">%</span></td>
             <td class="descriptions-item-value">50
@@ -122,16 +122,8 @@
             <td class="descriptions-item-text">Соблюдение<br>сроков</td>
             <td class="descriptions-item-text">Минимальная<br>предоплата</td>
           </tr>
-            <!-- <dd class="descriptions-item-value"></span>
-            </dd>
-            <dt></dt>
-            <dd class="descriptions-item-value">
-            </dd>
-            <dt></dt>
-            <dd class="descriptions-item-value">
-            </dd>
-            <dt></dt> -->
-          </table>
+        </table>
+      </div>
     </section>
     <section class="partners container">
       <h2 class="visually-hidden">Партнеры дизайн-студии «Нёрдс»</h2>
@@ -201,19 +193,25 @@
   <footer class="social-network container">
     <ul class="social-network-list">
       <li><a class="social-network-link" href="#nowhere">
-        <span class="visually-hidden">Вконтакте</span>
-        <svg class="social-svg" xmlns="http://www.w3.org/2000/svg" width="26" height="15"><path d="M16.1 11.5c1-.3 2.2 2 3.5 3 1 .6 1.7.5 1.7.5h3.5s1.8-.2 1-1.6c0-.1-.5-1-2.6-3-2.2-2-1.9-1.8.7-5.3 1.6-2.1 2.3-3.5 2-4-.1-.6-1.3-.4-1.3-.4h-4c-.3 0-.6.1-.8.5 0 0-.6 1.7-1.4 3.1-1.7 3-2.4 3.2-2.7 3-.7-.5-.5-1.8-.5-2.7 0-2.9.4-4.1-.9-4.4-.4-.1-.7-.2-1.8-.2-1.4 0-2.6 0-3.2.3-.5.3-.8.7-.6.8.2 0 .8.1 1.1.6.4.5.4 1.7.4 1.7s.3 3.5-.5 3.9c-.5.3-1.3-.3-2.8-3-.8-1.4-1.4-3-1.4-3L5.2 1 4.6.7H.8S.3.7.1.9c-.2.3 0 .7 0 .7S3 8.5 6.3 12c3 3.1 6.4 3 6.4 3h1.6s.4-.1.7-.4c.2-.2.2-.7.2-.7s0-2 1-2.4z"/></svg>
-      </a></li>
+          <span class="visually-hidden">Вконтакте</span>
+          <svg class="social-svg" xmlns="http://www.w3.org/2000/svg" width="26" height="15">
+            <path
+              d="M16.1 11.5c1-.3 2.2 2 3.5 3 1 .6 1.7.5 1.7.5h3.5s1.8-.2 1-1.6c0-.1-.5-1-2.6-3-2.2-2-1.9-1.8.7-5.3 1.6-2.1 2.3-3.5 2-4-.1-.6-1.3-.4-1.3-.4h-4c-.3 0-.6.1-.8.5 0 0-.6 1.7-1.4 3.1-1.7 3-2.4 3.2-2.7 3-.7-.5-.5-1.8-.5-2.7 0-2.9.4-4.1-.9-4.4-.4-.1-.7-.2-1.8-.2-1.4 0-2.6 0-3.2.3-.5.3-.8.7-.6.8.2 0 .8.1 1.1.6.4.5.4 1.7.4 1.7s.3 3.5-.5 3.9c-.5.3-1.3-.3-2.8-3-.8-1.4-1.4-3-1.4-3L5.2 1 4.6.7H.8S.3.7.1.9c-.2.3 0 .7 0 .7S3 8.5 6.3 12c3 3.1 6.4 3 6.4 3h1.6s.4-.1.7-.4c.2-.2.2-.7.2-.7s0-2 1-2.4z" />
+          </svg>
+        </a></li>
       <li><a class="social-network-link" href="#nowhere">
-        <span class="visually-hidden">Фейсбук</span>
-        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/>
-        </svg>
-      </a></li>
+          <span class="visually-hidden">Фейсбук</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+            <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" />
+          </svg>
+        </a></li>
       <li><a class="social-network-link" href="#nowhere">
-        <span class="visually-hidden">Инстаграм</span>
-        <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/>
-        </svg>
-      </a></li>
+          <span class="visually-hidden">Инстаграм</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+            <path
+              d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z" />
+          </svg>
+        </a></li>
     </ul>
     <div class="social-network-info">
       <p class="social-network-info1">Давайте дружить, это выгодно!</p>
