--- a/catalog.html
+++ b/catalog.html
@@ -196,6 +196,8 @@
       </div>
     </section>
     <section class="contacts">
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="1440" height="416" frameborder="1"
+        allowfullscreen="true"></iframe>
       <p>
         <img class="contacts-illustration" src="img/contacts.png" width="1440" height="416"
           alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
@@ -213,7 +215,7 @@
         </div>
       </div>
     </section>
-    <section class="modal modal-login hidden">
+    <section class="modal modal-login">
       <h2 class="modal-header">Напишите нам</h2>
       <form class="feedback" method="POST" action="https://echo.htmlacademy.ru">
         <p class="modal-info">
@@ -263,6 +265,7 @@
       <p class="social-network-info2">Скидка 10% для друзей из социальных сетей.</p>
     </div>
   </footer>
+  <script src="js/minimal.js"></script>
 </body>
 
 </html>
