--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
         <input class="visually-hidden" type="radio" id="product-2" name="toggle">
         <input class="visually-hidden" type="radio" id="product-3" name="toggle">
         <div class="slider-controls">
-          <label class="slider-controls-item slider-controls-item--1" for="product-1"><span
-              class="visually-hidden">Первый</span></label>
-          <label class="slider-controls-item slider-controls-item--2" for="product-2"><span
-              class="visually-hidden">Второй</span></label>
-          <label class="slider-controls-item slider-controls-item--3" for="product-3"><span
-              class="visually-hidden">Третий</span></label>
+          <label class="slider-controls-item slider-controls-item--1" for="product-1">
+            <span class="visually-hidden">Первый</span>
+          </label>
+          <label class="slider-controls-item slider-controls-item--2" for="product-2">
+            <span class="visually-hidden">Второй</span>
+          </label>
+          <label class="slider-controls-item slider-controls-item--3" for="product-3">
+            <span class="visually-hidden">Третий</span>
+          </label>
         </div>
         <ul class="slider-list container">
           <li class="slider-item slider-item1">
@@ -63,6 +66,7 @@
             <a class="slider-button button" href="#nowhere">Узнать больше</a>
           </li>
         </ul>
+      </div>
     </section>
     <section class="projects container">
       <h2 class="visually-hidden">Список видов проектов</h2>
@@ -158,8 +162,7 @@
       </ul>
     </section>
     <section class="contacts">
-      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="1440" height="416" frameborder="1"
-        allowfullscreen="true"></iframe>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="1440" height="416"></iframe>
       <p>
         <img class="contacts-illustration" src="img/contacts.png" width="1440" height="416"
           alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
