--- a/catalog.html
+++ b/catalog.html
@@ -196,8 +196,7 @@
       </div>
     </section>
     <section class="contacts">
-      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="1440" height="416" frameborder="1"
-        allowfullscreen="true"></iframe>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="1440" height="416"></iframe>
       <p>
         <img class="contacts-illustration" src="img/contacts.png" width="1440" height="416"
           alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
