--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </ul>
     </section>
     <section class="contacts">
-      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD" width="100%" height="416"></iframe>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CBFXQGSKCD"></iframe>
       <p>
         <img class="contacts-illustration" src="img/contacts.png" width="1440" height="416"
           alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
